Fixed most of the big layout issues with the main panel.

--- a/kbase-profile/static/custom/custom.css
+++ b/kbase-profile/static/custom/custom.css
@@ -10,11 +10,33 @@ This will always be an empty file in IPython
     overflow: visible;
 }
 
+div#notebook {
+    min-width: 460px;
+}
+
 #notebook-container {
     box-shadow: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
+    width: auto;
+    min-width: 460px;
 }
+
+@media (min-width: 1200px)
+#notebook-container {
+    width: auto;
+}
+
+@media (min-width: 992px)
+#notebook-container {
+    width: auto;
+}
+
+@media (min-width: 768px)
+#notebook-container {
+    width: auto;
+}
+
 .notebook_app {
     overflow-y: auto;
     background-color: #FFFFFF;
